<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Moto Log</string>
    <string name="app_name_no_spaces">MotoLog</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="FuelAmount">Fuel</string>
    <string name="MaintElem">Maint<item>Maintain</item><item>Maintain</item><item>Maintain</item></string>
    <string name="kmLabel">ODO:</string>
    <string name="Mileage">Mileage</string>
    <string name="Date">Date</string>
    <string name="Odometer">Odometer</string>

    <color name="LogTextColor">#551D55</color>
    <color name="LogRowColor">#FFCCCC</color>

    <string name="MileageShort">Mi:</string>
    <string name="LOG">log</string>
    <string name="REM">reminder</string>
    <string name="CONF">config.</string>
    <string name="NewLogCreation">New Log Entry &#8230;</string>
    <string name="NewRemCreation">New Reminder &#8230;</string>
    <string name="newlog_app">NewLog</string>
    <string name="title_activity_new_log">NewLog</string>
    <string name="title_activity_new_rem">NewRem</string>
    <string name="title_activity_refuel">RefuelActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_fuellydialog">FuellyDialog</string>
    <string name="Details">Details</string>
    <string name="metrics">km</string>
    <string name="fuelUnit">L</string>
    <string name="someString">SomeString</string>
    <string name="priceperLitre">Mi:</string>

    <string-array name="maintElemArray">
        <item>Fuel</item>
        <item>Chain</item>
        <item>Oil</item>
        <item>Brake</item>
        <item>Battery</item>
        <item>Other</item>
    </string-array>
    <string-array name="maintTypeArray">
        <item>Refuel</item>
        <item>Replace</item>
        <item>Repair</item>
        <item>Maintain</item>
        <item>Other</item>
    </string-array>
    <string-array name="intervalNumberArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="intervalTypeArray">
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>
    <string-array name="intervalTypeArrayP">
        <item>weeks</item>
        <item>months</item>
        <item>years</item>
    </string-array>
    <string-array name="pref_MileageType_entries">
        <item>L/100km</item>
        <item>MPG</item>
        <item>L/km</item>
        <item>km/L</item>
    </string-array>
    <string-array name="pref_MileageType_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_CashType_entries">
        <item>Price per unit (litre or gallon)</item>
        <item>Price per fill-up</item>
    </string-array>
    <string-array name="pref_CashType_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="elemtype_preference_file_key">com.example.motorcylemaintenancelog.elemtype_preference_file_key</string>
    <string name="interval_preference_file_key">com.example.motorcyclemaintenancelog.interval_preference_file_key</string>
    <string name="elem_preference_file_key">com.example.motorcyclemaintenancelog.elem_preference_file_key</string>
    <string name="general_preference_file_key">com.example.motorcyclemaintenancelog.elem_preference_file_key</string>
    <string name="title_log">Log</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_config">Config</string>
    <string name="menu_filter">Filter Log</string>
    <string name="menu_exportdb">Export Database</string>
    <string name="menu_importdb">Import Database</string>
    <string name="menu_add_log_entry">Add Log Entry</string>
    <string name="text_general_data">General Data</string>
    <string name="text_bike_name">Bike Name</string>
    <string name="text_date_of_purchase">Purchase Date</string>
    <string name="text_initial_odo">Initial Odo</string>
    <string name="text_other_details">Other details</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_total">Total</string>
    <string name="text_total_cost">Total cost</string>
    <string name="text_total_distance">Total distance</string>
    <string name="text_number_of_entries">No. of entries</string>
    <string name="text_in">in</string>
    <string name="select_date">Select Date</string>
    <string name="dialog_title_choose_db_to_import">Choose DB file to import</string>
    <string name="your_current_data_will_be_overwritten">YOUR CURRENT DATA WILL BE OVERWRITTEN.</string>
    <string name="importing">Importing</string>
    <string name="db_import_error">Failed to import DB.</string>
    <string name="dialog_title_permission_needed">Permission needed</string>
    <string name="dialog_message_read_ext_storage">Motolog needs to read your external storage to find DB files.</string>
    <string name="dialog_message_write_ext_storage">Motolog needs to write to your external storage to export DB files.</string>
    <string name="dialog_message_read_ext_storage_retry">Motolog was previously denied read access to external storage. Tap RETRY to open app settings and grant this permission.</string>
    <string name="dialog_message_write_ext_storage_retry">Motolog was previously denied write access to external storage. Tap RETRY to open app settings and grant this permission.</string>
    <string name="text_no_logs">No logs yet</string>
    <string name="text_cost_summary">Bike Cost Summary</string>
    <string name="text_sort_by_element">Element Cost Summary</string>
    <string name="button_create">Create</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_maintenance_element">Element</string>
    <string name="text_maintenance_type">Type</string>
    <string name="text_remind">Remind?</string>
    <string name="text_date">Date?</string>
    <string name="hint_reminder_interval">Reminder interval</string>
    <string name="text_distance_unit">km</string>
    <string name="text_fuel">Fuel</string>
    <string name="hint_fuel_amount">Fuel amount in litres</string>
    <string name="text_memo">Notes</string>
    <string name="hint_notes">Notes for this log entry (optional)</string>
    <string name="text_odometer">Odometer</string>
    <string name="text_odo">Odo</string>
    <string name="text_fuel_price">Price</string>
    <string name="text_price">Price</string>
    <string name="hint_price">Price</string>
    <string name="toolbar_title_new_log_entry">New Log Entry</string>
    <string name="toolbar_title_update_log_entry">Update Log Entry</string>
    <string name="button_update">Update</string>
    <string name="text_update_log_entry">Update Log Entry</string>
    <string name="text_odometer_reading">Odometer reading</string>
    <string name="text_when">When</string>
    <string name="button_choose_date">Choose Date</string>
    <string name="error_date">Error parsing date</string>
    <string name="error_price">Error parsing price</string>
    <string name="error_odometer">Invalid odometer reading</string>
    <string name="text_log_entry_updated">Log entry updated!</string>
    <string name="text_log_entry_added">Log entry added!</string>
    <string name="text_reminder_regenerated">Reminder regenerated!</string>
    <string name="text_km">km</string>
    <string name="text_miles">miles</string>
    <string name="text_update_entry">Update entry</string>
    <string name="text_update">Update</string>
    <string name="text_other">Other</string>
    <string name="text_oil">Oil</string>
    <string name="widget_refuel">Refuel</string>
    <string name="activity_refuel_text_add_new_refuel_log">Add New Refuel Log</string>
    <string name="error_enter_fuel_amount">Required</string>
    <string name="error_required">Required</string>
    <string name="text_new_fuel_entry_added">New fuel entry added!</string>
    <string name="text_fuel_consumption_is">Fuel consumption is: </string>
    <string name="text_have_a_safe_trip">Have a safe trip!</string>
    <string name="text_file_will_be_exported_to">File will be exported to: %s</string>
    <string name="text_exporting_database">Exporting Database</string>
    <string name="error_export_db_failed">Export DB failed!</string>
    <string name="button_ok">OK</string>
    <string name="text_no_reminders">No reminders yet</string>
    <string name="wrap_with_parentheses">(%s)</string>
    <string name="text_reminder_last_interval">Previous: %1$s %2$s</string>
    <string name="text_reminder_next_interval">Next: %1$s %2$s</string>
    <string name="text_reminder_description">%1$s %2$s every %3$s %4$s</string>
    <string name="dialog_date">Date</string>
    <string name="dialog_odo">Odo</string>
    <string name="dialog_details">Details</string>
    <string name="dialog_main_log_title">%1$s (%2$s)</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_update">Update</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_text_odometer">%1$d %2$s</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_text_delete_entry">Are you sure you want to delete this entry?</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="element_type_fuel">Fuel</string>
    <string name="error_corrupt_data">Corrupt data in entry!</string>
    <string name="dialog_filter">Filter</string>
    <string name="button_apply">Apply</string>
    <string name="button_select_all">Select All</string>
    <string name="dialog_about">About</string>
    <string name="button_import">Import</string>
    <string name="button_retry">Retry</string>
    <string name="button_rename">Rename</string>
    <string name="text_enter_filename">Enter filename</string>
    <string name="text_export_database_success">Successfully exported database</string>
    <string name="dialog_error">Error</string>
    <string name="text_price_invalid">Motolog only allows prices up to %s</string>
    <string name="text_prices_in_entry_empty">0\u0024 in 0 entries</string>
    <string name="text_prices_in_entry_1">%s\u0024 in 1 entry</string>
    <string name="text_prices_in_entry">%1$s\u0024 in %2$s entries </string>
    <string name="dialog_title_add_new_element">Add New Element</string>
    <string name="hint_add_new_element">Element name</string>
    <string name="button_add">Add</string>
    <string name="button_use_other">Use \"Other\"</string>
    <string name="dialog_title_add_new_element_type">Add New Element Type</string>
    <string name="text_price_required">Price required. Enter 0 if no price.</string>
    <string name="text_fuel_amount_required">Fuel amount required.</string>
    <string name="text_odo_required">Odometer reading required.</string>

    <plurals name="entries">
        <item quantity="zero">entries</item>
        <item quantity="one">entry</item>
        <item quantity="other">entries</item>
    </plurals>

</resources>