<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_addLogEntry"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_add"
        android:title="@string/menu_add_log_entry"
        />

    <item
        android:id="@+id/menu_importdb"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_importdb"
        />

    <item
        android:id="@+id/menu_exportdb"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/menu_exportdb"
        />

    <item
        android:id="@+id/menu_filter"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/menu_filter"
        />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:title="@string/menu_settings"
        />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="500"
        app:showAsAction="never"
        android:title="@string/menu_about"
        />
    
</menu>