<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newlogfragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewLogActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/layoutWhen"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/textWhen"
                    app:layout_widthPercent="25%"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/text_when"
                    />

                <Button
                    android:id="@+id/buttonDate"
                    app:layout_widthPercent="75%"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textWhen"
                    android:layout_toEndOf="@id/textWhen"
                    android:text="@string/button_choose_date"
                    />

            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/layoutElement"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/textElement"
                    app:layout_widthPercent="25%"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/text_maintenance_element"
                    android:textSize="20sp"
                    />

                <Spinner
                    android:id="@+id/spinnerElement"
                    app:layout_widthPercent="75%"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/textElement"
                    android:layout_toEndOf="@id/textElement"
                    />

            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/layoutType"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/textType"
                    app:layout_widthPercent="25%"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/text_maintenance_type"
                    android:textSize="20sp"
                    />

                <Spinner
                    android:id="@+id/spinnerType"
                    app:layout_widthPercent="50%"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/textType"
                    android:layout_toEndOf="@id/textType"
                    />

                <CheckBox
                    android:id="@+id/checkBoxReminder"
                    app:layout_widthPercent="25%"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/spinnerType"
                    android:layout_toEndOf="@id/spinnerType"
                    android:text="@string/text_remind"
                    />

                </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/layoutReminder"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:visibility="gone"
                tools:visibility="visible">

                <EditText
                    android:id="@+id/editTextReminderInterval"
                    app:layout_widthPercent="60%"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_reminder_interval"
                    android:inputType="number"
                    android:maxLines="1"
                    />

                <TextView
                    android:id="@+id/textReminderIntervalUnit"
                    app:layout_widthPercent="15%"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/editTextReminderInterval"
                    android:layout_alignBottom="@id/editTextReminderInterval"
                    android:layout_toRightOf="@id/editTextReminderInterval"
                    android:layout_toEndOf="@id/editTextReminderInterval"
                    android:gravity="center"
                    android:text="@string/text_distance_unit"
                    />

                <CheckBox
                    android:id="@+id/checkBoxDate"
                    app:layout_widthPercent="25%"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/editTextReminderInterval"
                    android:layout_alignBottom="@id/editTextReminderInterval"
                    android:text="@string/text_date"
                    />

                <Spinner
                    android:id="@+id/spinnerReminderIntervalDateNumber"
                    app:layout_widthPercent="30%"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    tools:visibility="visible"
                    />

                <Spinner
                    android:id="@+id/spinnerReminderIntervalDateType"
                    app:layout_widthPercent="30%"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/spinnerReminderIntervalDateNumber"
                    android:layout_toEndOf="@id/spinnerReminderIntervalDateNumber"
                    android:visibility="gone"
                    tools:visibility="visible"
                    />

            </android.support.percent.PercentRelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextFuel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fuel_amount"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:maxLength="3"
                    />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editTextPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:hint="@string/hint_price"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textPriceUnit"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="/l"
                    />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextOdometer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_odometer_reading"
                    android:inputType="number"
                    android:maxLength="8"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextMemo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_notes"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_create"
            />

    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>