<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.percentlayout.widget.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/bikenametext"
            android:layout_width="0dp"
            app:layout_widthPercent="60%"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:inputType="textCapWords"
            tools:text="Honda Phantom TA200"
            />

        <EditText
            android:id="@+id/dateofpurchaset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="60%"
            android:layout_below="@id/bikenametext"
            android:layout_alignParentRight="true"
            android:focusable="false"
            tools:text="04 May 2016"/>

        <EditText
            android:id="@+id/initialodometert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="60%"
            android:layout_below="@id/dateofpurchaset"
            android:layout_alignParentRight="true"
            android:inputType="number"
            tools:text="12345"
            />

        <TextView
            android:id="@+id/bikename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="40%"
            android:layout_alignTop="@id/bikenametext"
            android:layout_alignBottom="@id/bikenametext"
            android:gravity="center_vertical"
            android:text="@string/text_bike_name"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/dateofpur"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="40%"
            android:layout_alignTop="@id/dateofpurchaset"
            android:layout_alignBottom="@id/dateofpurchaset"
            android:gravity="center_vertical"
            android:layout_below="@id/bikename"
            android:text="@string/text_date_of_purchase"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/initialodometer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_widthPercent="40%"
            android:layout_alignTop="@id/initialodometert"
            android:layout_alignBottom="@id/initialodometert"
            android:gravity="center_vertical"
            android:layout_below="@id/dateofpur"
            android:text="@string/text_initial_odo"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textOtherDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_other_details"
            android:layout_below="@id/initialodometer"
            />

        <EditText
            android:id="@+id/otherdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textOtherDetails"
            android:inputType="textCapSentences"
            />

        <TextView
            android:id="@+id/labelCostSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_cost_summary"
            android:layout_below="@id/otherdetails"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textFrom"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_widthPercent="15%"
            android:layout_below="@id/labelCostSummary"
            android:gravity="center_vertical"
            android:text="@string/text_from"
            />

        <Button
            android:id="@+id/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelCostSummary"
            android:layout_toRightOf="@id/textFrom"
            app:layout_widthPercent="30%"
            android:text="00/00/0000"
            />

        <TextView
            android:id="@+id/textTo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_widthPercent="15%"
            android:layout_below="@id/labelCostSummary"
            android:layout_toRightOf="@id/from"
            android:gravity="center"
            android:text="@string/text_to"
            />

        <Button
            android:id="@+id/to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelCostSummary"
            app:layout_widthPercent="30%"
            android:layout_toRightOf="@id/textTo"
            android:text="00/00/0000"
            />



        <TextView
            android:id="@+id/textTotalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="30%"
            android:layout_below="@id/textFrom"
            android:layout_marginTop="8dp"
            android:text="@string/text_total_cost"
            android:textColor="@color/tabselected"
            />

        <TextView
            android:id="@+id/totalcash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_widthPercent="30%"
            android:layout_below="@id/textFrom"
            android:layout_toRightOf="@id/textTotalCost"
            tools:text="$12345"
            />

        <TextView
            android:id="@+id/cashperday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_widthPercent="40%"
            android:layout_below="@id/textFrom"
            android:layout_toRightOf="@id/totalcash"
            tools:text="$100/day"
            />

        <TextView
            android:id="@+id/textTotalDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="30%"
            android:layout_below="@id/textTotalCost"
            android:text="@string/text_total_distance"
            android:textColor="@color/tabselected"
            />

        <TextView
            android:id="@+id/totalkm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="30%"
            android:layout_below="@id/totalcash"
            android:layout_toRightOf="@id/textTotalDistance"
            tools:text="12345"
            />

        <TextView
            android:id="@+id/cashperkm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="40%"
            android:layout_below="@id/cashperday"
            android:layout_toRightOf="@id/totalkm"
            tools:text="$100/km"
            />

        <TextView
            android:id="@+id/textNumberOfEntries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTotalDistance"
            android:text="@string/text_number_of_entries"
            android:textColor="@color/tabselected"
            />

        <TextView
            android:id="@+id/entries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textNumberOfEntries"
            android:layout_below="@id/textTotalDistance"
            android:layout_alignLeft="@id/totalkm"
            tools:text="12345"
            />

        <TextView
            android:id="@+id/labelSortByElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/textNumberOfEntries"
            android:textSize="18sp"
            android:text="@string/text_sort_by_element"
            />

        <Spinner
            android:id="@+id/spinnerElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelSortByElement"
            app:layout_widthPercent="50%"
            />

        <TextView
            android:id="@+id/textPricesInEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/spinnerElement"
            android:layout_toRightOf="@id/spinnerElement"
            android:layout_below="@id/labelSortByElement"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/tabselected"
            tools:text="$XXX in X entries"
            />

    </androidx.percentlayout.widget.PercentRelativeLayout>

</ScrollView>